--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev -p 5000",
     "build": "next build",
-    "start": "next build && next start -p 5000",
+    "start": "next start -p 5000",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.yml -r dotenv/config"
   },
