--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog-dupe-frontend",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start -p 5000",
     "lint": "next lint",
